them dc updates

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -273,6 +273,8 @@ import CopyWrap from "./utils/CopyWrap.astro";
     </figure>
     <figure class="grid__item items-center flex girditemtext">
       <figcaption class="">
+        <h3 class="md:px-10 text-black text-base leading-5">The Insight</h3>
+        <br />
         <p class="md:px-10 text-black text-base leading-5">
           For LGBTQ+ travelers, trusted recommendations don't come from
           traditional advertising-they come from community-driven storytelling
