--- a/src/components/VideoCopyOne.astro
+++ b/src/components/VideoCopyOne.astro
@@ -11,14 +11,7 @@ import CopyWrap from "./utils/CopyWrap.astro";
     unexpected yet thriving LGBTQ+ hub-one that offers world-class nightlife,
     cultural depth, and a tight-knit, inclusive community. The insight was
     clear: queer travelers prioritize experiences where they feel seen,
-    celebrated, and safe. <br /><br /> Queering the Capital is a photo, video, and
-    social series where them follows four queer friends on a weekend getaway in Washington,
-    D.C., capturing their journey. Experiencing the city's vibrant queer culture,
-    they visit LGBTQ+ spots like As You Are, the DC LGBTQ+ Community Center, and
-    Trade. From brunch and volunteering to voguing in front of iconic monuments,
-    their adventure celebrates queer joy and self-expression. The series highlights
-    their deep connections and the unbreakable bonds of chosen family, offering a
-    vibrant look at D.C.'s queer culture and authentic living.
+    celebrated, and safe.
   </CopyWrap>
   <Video
     url="https://res.cloudinary.com/dbwsyvmxr/video/upload/v1743706340/CONDE_NAST_DC_X_THEM_2024_AWARDS_SIZZLE_H264_1_ow7g1c"
@@ -27,14 +20,30 @@ import CopyWrap from "./utils/CopyWrap.astro";
     className="h-auto w-[800px]"
     poster="https://media.them.us/photos/67eee24449434534793b4c02/original/pass/sizzleposter.jpg?format=original"
   />
-  <CopyWrap>
-    We ditched the typical travel content series for something more innovative.
-    Instead of following a scripted itinerary, we empowered four queer friends
-    to curate their own journey, making it feel like a genuine travel
-    recommendation rather than a branded message. Through long-form video,
-    photography, social media placements, and influencer amplification, we
-    immersed the audience in an exhilarating adventure. The video blends
-    cinematic travel documentary aesthetics with raw, intimate vlogging,
-    creating an authentic, emotionally resonant experience.
-  </CopyWrap>
+
+  <div
+    class="w-full max-w-[600px] mx-auto text-black text-base leading-5 px-10 md:my-24 my-16"
+  >
+    <h3>The Campaign</h3>
+    <br />
+    <p>
+      Queering the Capital is a photo, video, and social series where them
+      follows four queer friends on a weekend getaway in Washington, D.C.,
+      capturing their journey. Experiencing the city's vibrant queer culture,
+      they visit LGBTQ+ spots like As You Are, the DC LGBTQ+ Community Center,
+      and Trade. From brunch and volunteering to voguing in front of iconic
+      monuments, their adventure celebrates queer joy and self-expression. The
+      series highlights their deep connections and the unbreakable bonds of
+      chosen family, offering a vibrant look at D.C.'s queer culture and
+      authentic living.
+      <br /><br />
+      We ditched the typical travel content series for something more innovative.
+      Instead of following a scripted itinerary, we empowered four queer friends
+      to curate their own journey, making it feel like a genuine travel recommendation
+      rather than a branded message. Through long-form video, photography, social
+      media placements, and influencer amplification, we immersed the audience in
+      an exhilarating adventure. The video blends cinematic travel documentary aesthetics
+      with raw, intimate vlogging, creating an authentic, emotionally resonant experience.
+    </p>
+  </div>
 </section>
